--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Hola mundo</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos provident eveniet maxime harum autem animi illum omnis error voluptatum velit adipisci libero, ipsa inventore cum atque quasi quia odio quam?</p>
-    <h2>article</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus fugiat, hic reprehenderit ipsam ullam iste amet facere, maxime incidunt qui aspernatur ratione commodi iusto temporibus corporis deleniti neque ducimus perspiciatis?</p>
 </body>
 </html>
