--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <h1>Hola mundo</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos provident eveniet maxime harum autem animi illum omnis error voluptatum velit adipisci libero, ipsa inventore cum atque quasi quia odio quam?</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus fugiat, hic reprehenderit ipsam ullam iste amet facere, maxime incidunt qui aspernatur ratione commodi iusto temporibus corporis deleniti neque ducimus perspiciatis?</p>
+    <ul>
+        <li>hola</li>
+        <li>como</li>
+    </ul>
 </body>
 </html>
