--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/stilos.css">
-    <title>El titulo del post</title>
+    <title>El titulo del post 2.0</title>
 </head>
 <body>
     <h1>Aqui vamos a hacer un blog post</h1>
